--- a/public/styles.css
+++ b/public/styles.css
@@ -1,62 +1,67 @@
 body {
-     padding: 20px;
-     background-color: #f8f9fa;
-     font-family: 'Poppins', sans-serif;
+    padding-top: 70px; /* Adjust as needed based on navbar height */
+    padding-bottom: 60px; /* Adjust for footer height */
+    background-color: #343a40;
+    color: #fff;
+    font-family: 'Roboto Mono', monospace;
 }
- .container {
-     background-color: #ffffff;
-     border-radius: 10px;
-     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-     padding: 20px;
-     margin-top: 20px;
-     margin-bottom: 20px;
+
+.navbar {
+    background-color: #212529 !important;
 }
- h1 {
-     color: #343a40;
+
+.navbar-brand {
+    color: #fff !important;
 }
- label {
-     color: #495057;
+
+.nav-link {
+    color: #fff !important;
 }
- .centered-textarea {
-     display: block;
-     margin: 0 auto;
-     width: 100%;
-     min-height: 150px;
-     padding: 10px;
-     box-sizing: border-box;
-     border: 1px solid #ced4da;
-     border-radius: 5px;
-     resize: none;
+
+.container {
+    background-color: #495057;
+    color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
- .btn-primary {
-     background-color: #007bff;
-     border: 1px solid #007bff;
+
+h1, h2, h3, h4, h5, h6 {
+    color: #28a745; /* Green color for headings */
 }
- .btn-primary:hover {
-     background-color: #0056b3;
-     border: 1px solid #0056b3;
+
+.btn-primary {
+    background-color: #17a2b8; /* Cyan color for buttons */
+    border: 1px solid #17a2b8;
 }
- .success-message {
-     color: green;
-     margin-top: 10px;
+
+.btn-primary:hover {
+    background-color: #138496; /* Darker cyan on hover */
+    border: 1px solid #138496;
 }
- .footer {
-     background-color: rgba(255, 255, 255, 0.7);
-     padding: 10px;
-     text-align: center;
-     font-size: 16px;
-     color: #555;
-     margin-top: 50px;
-     border-top: 1px solid #ccc;
-     position: fixed;
-     bottom: 0;
-     left: 0;
-     width: 100%;
+
+.form-control {
+    background-color: #fff;
+    color: #000;
 }
- .footer p {
-     margin: 0;
-     display: inline-block;
-     margin-right: 30px;
+
+.footer {
+    background-color: #343a40;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+
+.footer p {
+    margin: 0;
+    display: inline-block;
+    margin-right: 30px;
+
 }
  .container-buttons {
      margin-top: 20px;
@@ -85,7 +90,7 @@ body {
   cursor: pointer;
   transition: background-color 0.3s ease, border-color 0.3s ease; 
   border-color: #ccc;
-  background-color: #fff;
+  background-color: #000000;
 }
 
 .form-check:hover {
@@ -118,5 +123,4 @@ body {
 
 #listOfCommands:not(.modal), #listOfCommandsEvent:not(.modal), #prefixOfCommands:not(.modal), #adminOfCommands:not(.modal) {
   box-shadow: none !important;
-}
-
+     }
